--- a/public/html/hashtag.html
+++ b/public/html/hashtag.html
@@ -4,13 +4,13 @@
 	<img ng-src='{{giph}}' alt="" class="col-xs-10 col-xs-offset-1">
 </div>
 
-<div class="row">
+<div class="row" ng-hide='submitted'>
 	<div class="col-sm-6">
 
 		<form ng-submit='addHashTag(hashtag)'>
 			<div class="form-group">
 				<label>HashTag</label>
-				<input class="form-control" type="text" placeholder="#blahblah" ng-model='hashtag.hash' required>
+				<input class="form-control" type="text" placeholder="#blahblah" ng-model='hashtag' required>
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
@@ -42,7 +42,8 @@
 
 <tr ng-repeat="hashtag in hashtags track by $index">
 	<td>
-		<a href="#" editable-text="thing.name" onbeforesave="editOneThing(thing)" e-required>{{ hashtag ||'empty' }}</a>
+		<a href="#" editable-text="hashtag.hash" onbeforesave="editOneThing(thing)" e-required>{{ hashtag.hash ||'empty' }}</a>
+		<button ng-hide='voted' ng-click='addVote(hashtag)' class="btn btn-success pull-right"><i class="glyphicon glyphicon-thumbs-up"></i></button>
 	</td>
 </tr>
 
